# credits

./: COPYING  README  repos.yaml  requirements.txt  setup.cfg
credits/: api.py  serve.py  util.py
sample/: config.yaml
templates/: base.html  index.html  project.html  reviews.html
