[metadata]
name = credits
summary = Firefly contributors credits
description-file =
    README
author = Sahid Orentino Ferdjaoui
author-email = sahid.ferdjaoui@cloudwatt.com
home-page = https://wiki.openstack.org/wiki/Warm
classifier =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Operating System :: POSIX :: Linux

[files]
packages =
    credits

[entry_points]
console_scripts =
    creditsd = credits:serve.main
