[metadata]
name = credits
summary = Firefly Contributors Credits
description-file =
    README
author = Sahid Orentino Ferdjaoui
author-email = sahid.ferdjaoui@gmail.com
home-page = https://credits.sahid.us/
classifier =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Operating System :: POSIX :: Linux

[files]
packages =
    credits

[entry_points]
console_scripts =
    creditsd = credits:serve.main
